--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.8"
 services:
  ftb-server:
+  container_name: ftb-server
   build:
    context: .
    args:
@@ -10,6 +11,6 @@ services:
     - ./server-data/eula.txt:/app/eula.txt
     - ./server-data/world/:/app/world
   ports:
-   - "25564:25565"
+   - "25565:25565"
 volumes:
   server-data:
